# cv-pipeline-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
doc/: adas_configuration.json  configuration.json
src/: CMakeLists.txt  Controller.cpp  Controller.h  FrameSourceNavigationWidget.cpp  FrameSourceNavigationWidget.h  ProcessorWidget.cpp  ProcessorWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  qlabelmat.cpp  qlabelmat.h  qwidgethandler.cpp  qwidgethandler.h
test/: CMakeLists.txt  ParametersWidget.test.cpp
